Fixed appartment buttons display on mobile

--- a/frontend/src/components/Apartment/Apartment.css
+++ b/frontend/src/components/Apartment/Apartment.css
@@ -17,5 +17,12 @@
 }
 .apt-buttons {
   display: flex;
-  flex-wrap: nowrap;
+}
+
+@media screen and (max-width: 900px) {
+  .apartments-panel .apt-buttons {
+    min-height: 150px;
+    flex-direction: column;
+    justify-content: space-around;
+  }
 }
